--- a/control/config/config.yml.example
+++ b/control/config/config.yml.example
@@ -2,7 +2,7 @@ ssl:
   # These are the settings for your self-signed SSL certificate.
   # Leave any of these out and they'll default to the values specified below.
 
-  country: ""       # Default: Ireland
+  country: ""       # Default: IE
   state: ""         # Default: Dublin
   location: ""      # Default: Dublin
   company: ""       # Default: Ultros
